@@ -1,3 +1,11 @@
+2008-06-10  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Dialog_Progress.cc: Added proper PO file plural handling.
+	  - fixed a few spelling errors.
+
+	* src/Win_GParted.cc: Added proper PO file plural handling.
+	  - Closes GParted bug #315291
+
 2008-05-10  Curtis Gedak  <gedakc@gmail.com>
 
 	* README: Removed absolute requirement for hal-lock.
